Issue fixed with z-index position between menu and home page

--- a/src/components/pages/HomePage/index.scss
+++ b/src/components/pages/HomePage/index.scss
@@ -1,7 +1,1 @@
 @import '@/styles/variables.module.scss';
-
-.box_test {
-  width: 300px;
-  height: 300px;
-  background: red;
-}
