--- a/src/components/shared/menu_container/index.scss
+++ b/src/components/shared/menu_container/index.scss
@@ -1,6 +1,6 @@
 @import '@/styles/variables.module.scss';
 
-#menu {
+#menu_container {
   font-size: 18px;
   font-weight: 500;
   line-height: 100%;
